# aroma

./: CMakeLists.txt  aroma.py
documents/: aroma.doc
sandbox/: out.xml  sandbox.py  test.xsl  tree2.cpp  xpath.cpp
source/: param_decl.cpp
source/pull_up/: animal.hpp  cat.cpp  cat.hpp  dog.cpp  dog.hpp  run.cpp
source/pull_up_field/: animal.cpp
src/: CMakeLists.txt  aroma.cpp
test/: while.xml
test/add_parameter/: param_decl.xml
test/pull_up/: pull_up.xml
test/pull_up_field/: pull_up.xml
test/pull_up_function/: pull_up.xml
transform/: __init__.py  add_parameter.py  move_field.py  pull_up_field.py
transform/xslt/: __init__.py  xsl.py
xslt/add_param/: add_param.xsl
